SERVER-31485 Race between move chunks and dropIndex may lead to IndexNotFound error